--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
 						<li><a class="smoothscroll"  href="#resume" title=""><i class="fa  fa-id-card-o"></i>&nbsp;&nbsp;Resume</a></li>
 						<li><a class="smoothscroll"  href="#portfolio" title=""><i class="fa  fa-th-large"></i>&nbsp;&nbsp;&nbsp;Portfolio</a></li>
 						<li><a class="smoothscroll"  href="#services" title=""><i class="fa  fa-code"></i>&nbsp;&nbsp;&nbsp;Services</a></li>					
-						<li><a class="smoothscroll"  href="#contact" title=""><i class="fa  fa-send"></i>&nbsp;&nbsp;&nbsp;Contact</a></li>	
-						<li><a href="styles.html" title="">Style Demo</a></li>				
+						<li><a class="smoothscroll"  href="#contact" title=""><i class="fa  fa-send"></i>&nbsp;&nbsp;&nbsp;Contact</a></li>		
 					</ul>
 				</nav>    		
    		</div> <!-- /top-bar --> 
@@ -96,7 +95,7 @@
          <li><a href="https://weibo.com/renkai123"><i class="fa fa-weibo"></i></a></li>
          <li><a href="https://www.facebook.com/renkaigis"><i class="fa fa-facebook"></i></a></li>
          <li><a href="mailto:renkaigis@foxmail.com"><i class="fa fa-envelope"></i></a></li>
-         <li><a href="#"><i class="fa fa-camera"></i></a></li>
+         <li><a href="http://photo.renkaigis.com/"><i class="fa fa-camera"></i></a></li>
       </ul> <!-- /intro-social -->      	
 
    </section> <!-- /intro -->
@@ -598,7 +597,7 @@
 
 	<!-- CTA Section
    ================================================== -->
-	<section id="cta" class="grey-section">
+	<!-- <section id="cta" class="grey-section">
 
    	<div class="row cta-content">
 
@@ -609,7 +608,6 @@
 		      <p class="lead">
 		      Looking for an awesome and reliable webhosting? Try <a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT"><span>DreamHost</span></a>.
 				Get <span>$50 off</span> when you sign up with the promocode <span>styleshout</span>. 
-				<!-- Simply type	the promocode in the box labeled “Promo Code” when placing your order. -->	
 				</p>
 
 				<div class="action">
@@ -618,9 +616,10 @@
 
    		</div>
 
-   	</div> <!-- /cta-content -->
+   	</div>
 
-   </section> <!-- /cta --> 
+   </section> -->
+    <!-- /cta  -->
 
 	
 	<!-- services Section
@@ -740,119 +739,6 @@
 		
 	</section> <!-- /services -->	
 
-
-	<!-- stats Section
-   ================================================== -->
-	<section id="stats" class="count-up">
-
-		<div class="row">
-			<div class="col-twelve">
-
-				<div class="block-1-6 block-s-1-3 block-tab-1-2 block-mob-full stats-list">
-
-					<div class="bgrid stat">
-
-						<div class="icon-part">
-							<i class="icon-pencil-ruler"></i>
-						</div>
-
-						<h3 class="stat-count">
-							1500
-						</h3>
-
-						<h5 class="stat-title">
-							Projects Completed
-						</h5>
-
-					</div> <!-- /stat -->					
-
-					<div class="bgrid stat">
-
-						<div class="icon-part">
-							<i class="icon-users"></i>
-						</div>
-
-						<h3 class="stat-count">
-							900
-						</h3>
-
-						<h5 class="stat-title">
-							Happy Clients
-						</h5>
-
-					</div> <!-- /stat -->
-
-					<div class="bgrid stat">
-
-						<div class="icon-part">
-							<i class="icon-badge"></i>
-						</div>
-
-						<h3 class="stat-count">
-							200
-						</h3>
-
-						<h5 class="stat-title">
-							Awards Received
-						</h5>
-
-					</div> <!-- /stat -->									
-
-					<div class="bgrid stat">
-
-						<div class="icon-part">
-							<i class="icon-light-bulb"></i>
-						</div>
-
-						<h3 class="stat-count">
-							120
-						</h3>
-
-						<h5 class="stat-title">
-							Crazy Ideas
-						</h5>
-
-					</div> <!-- /stat -->
-
-					<div class="bgrid stat">
-
-						<div class="icon-part">
-							<i class="icon-cup"></i>
-						</div>
-
-						<h3 class="stat-count">
-							1500
-						</h3>
-
-						<h5 class="stat-title">
-							Coffee Cups
-						</h5>
-
-					</div> <!-- /stat -->
-
-					<div class="bgrid stat">
-
-						<div class="icon-part">
-							<i class="icon-clock"></i>
-						</div>
-
-						<h3 class="stat-count">
-							7200
-						</h3>
-
-						<h5 class="stat-title">
-							Hours
-						</h5>
-
-					</div> <!-- /stat -->
-
-				</div> <!-- /stats-list -->
-
-			</div> <!-- /twelve -->
-		</div> <!-- /row -->
-
-	</section> <!-- /stats -->
-
 	
    <!-- contact
    ================================================== -->
@@ -864,57 +750,11 @@
    			<h5>Contact</h5>
    			<h1>I'd Love To Hear From You.</h1>
 
-   			<p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
+   			<p class="lead">希望有共同爱好的人能共同进步！欢迎探讨学习上的问题。</p>
 
    		</div> 
    	</div> <!-- /section-intro -->
 
-   	<div class="row contact-form">
-
-   		<div class="col-twelve">
-
-            <!-- form -->
-            <form name="contactForm" id="contactForm" method="post" action="">
-      			<fieldset>
-
-                  <div class="form-field">
- 						   <input name="contactName" type="text" id="contactName" placeholder="Name" value="" minlength="2" required="">
-                  </div>
-                  <div class="form-field">
-	      			   <input name="contactEmail" type="email" id="contactEmail" placeholder="Email" value="" required="">
-	               </div>
-                  <div class="form-field">
-	     				   <input name="contactSubject" type="text" id="contactSubject" placeholder="Subject" value="">
-	               </div>                       
-                  <div class="form-field">
-	                 	<textarea name="contactMessage" id="contactMessage" placeholder="message" rows="10" cols="50" required=""></textarea>
-	               </div>                      
-                 <div class="form-field">
-                     <button class="submitform">Submit</button>
-                     <div id="submit-loader">
-                        <div class="text-loader">Sending...</div>                             
-       				      <div class="s-loader">
-								  	<div class="bounce1"></div>
-								  	<div class="bounce2"></div>
-								  	<div class="bounce3"></div>
-								</div>
-							</div>
-                  </div>
-
-      			</fieldset>
-      		</form> <!-- Form End -->
-
-            <!-- contact-warning -->
-            <div id="message-warning">            	
-            </div>            
-            <!-- contact-success -->
-      		<div id="message-success">
-               <i class="fa fa-check"></i>Your message was sent, thank you!<br>
-      		</div>
-
-         </div> <!-- /col-twelve -->
-   		
-   	</div> <!-- /contact-form -->
 
    	<div class="row contact-info">
 
@@ -927,9 +767,8 @@
    			<h5>Where to find me</h5>
 
    			<p>
-            1600 Amphitheatre Parkway<br>
-            Mountain View, CA<br>
-            94043 US
+            NanJing Normal University<br>
+            School of Geography Science
             </p>
 
    		</div>
@@ -942,8 +781,8 @@
 
    			<h5>Email Me At</h5>
 
-   			<p>someone@kardswebsite.com<br>
-			   	info@kardswebsite.com			     
+			   <p><a href="mailto:renkaigis@foxmail.com" style="color:#888888">renkaigis@foxmail.com</a><br>
+				<a href="mailto:renkaigis@gmail.com" style="color:#888888">renkaigis@gmail.com</a>			     
 			   </p>
 
    		</div>
@@ -956,9 +795,7 @@
 
    			<h5>Call Me At</h5>
 
-   			<p>Phone: (+63) 555 1212<br>
-			   	Mobile: (+63) 555 0100<br>
-			     	Fax: (+63) 555 0101
+   			<p>Phone: 18851138358<br>
 			   </p>
 
    		</div>
@@ -977,11 +814,12 @@
      		<div class="col-six tab-full pull-right social">
 
      			<ul class="footer-social">        
+					<li><a href="http://renkaigis.com/"><i class="fa fa-heartbeat"></i></a></li>      
 					<li><a href="https://github.com/renkaigis"><i class="fa fa-github"></i></a></li>
 					<li><a href="https://weibo.com/renkai123"><i class="fa fa-weibo"></i></a></li>
 					<li><a href="https://www.facebook.com/renkaigis"><i class="fa fa-facebook"></i></a></li>
 					<li><a href="mailto:renkaigis@foxmail.com"><i class="fa fa-envelope"></i></a></li>
-					<li><a href="#"><i class="fa fa-camera"></i></a></li>
+					<li><a href="http://photo.renkaigis.com/"><i class="fa fa-camera"></i></a></li>
 			   </ul> 
 	      		
 	      </div>
