--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
 		<div class="row resume-timeline">
 				<div class="col-twelve resume-header">
 
-						<h2>成果奖项（Education）</h2>
+						<h2>成果奖项（Achievements 	&amp; Awards）</h2>
 			
 					</div> <!-- /resume-header -->
 
@@ -528,8 +528,6 @@
 	               </div>
 					</div> <!-- /folio-item -->   
 					
-                    
-                    <div class="copyrights">Collect from <a href="http://www.cssmoban.com/" >企业网站模板</a></div>
 
 	            <!-- modal popups - begin
 	            ============================================================= -->
@@ -547,7 +545,7 @@
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://www.behance.net">Details</a>
+			            <a href="#">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -567,7 +565,7 @@
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://www.behance.net">Details</a>
+			            <a href="#">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -587,7 +585,7 @@
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://www.behance.net">Details</a>
+			            <a href="#">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -607,7 +605,7 @@
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://www.behance.net">Details</a>
+			            <a href="#">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -627,7 +625,7 @@
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://www.behance.net">Details</a>
+			            <a href="#">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
