基本完成，不想再改了

--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@
 
    				<img src="images/profile-pic.jpg" alt="Profile Picture">
 
-   				<p class="lead">热情随和，活波开朗，具有进取精神和团队精神，有较强的动手潜力。热爱学习，热爱跑步，热爱摄影，热爱生活！</p>
+				   <p class="lead">热情随和，活波开朗，具有进取精神和团队精神，有较强的动手潜力。</p>
+				   <p class="lead">热爱学习，热爱跑步，热爱摄影，热爱生活！</p>
    			</div>   			
 
    		</div>   		
@@ -539,13 +540,13 @@
 
 					   <div class="description-box">
 					      <h4>滇池蓝藻水华漂移模拟</h4>		      
-					      <p>后续补充……</p>
+					      <p>将初始时刻的遥感反演蓝藻水华区域映射为栅格质点，然后根据质点运移方程，计算动力条件下的质点运移坐标，生成整个滇池水域分时水华栅格图层，并进行分层渲染，即将点集数据转换成栅格数据进行可视化。</p>
 
 					      <div class="categories">昆明市环境监测中心项目</div>			               
 					   </div>
 
 			         <div class="link-box">
-			            <a href="#">Details</a>
+			            <a href="javascript:void(0)">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -559,13 +560,13 @@
 
 					   <div class="description-box">
 					      <h4>滇池 Chl-a 浓度可视化</h4>		      
-					      <p>后续补充……</p>
+					      <p>在离散点网格的基础上，考虑风速风向、出入湖径流量等因素，读取 Chl-a 初始浓度数据，使用模型计算各时刻浓度值，利用 VTK 实现浓度数据的可视化表达。</p>
 
 					      <div class="categories">昆明市环境监测中心项目</div>			               
 					   </div>
 
 			         <div class="link-box">
-			            <a href="#">Details</a>
+			            <a href="javascript:void(0)">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -579,13 +580,13 @@
 
 					   <div class="description-box">
 					      <h4>滇池流场可视化</h4>		      
-					      <p>后续补充……</p>
+					      <p>考虑风速风向、出入湖径流量等因素，使用模型计算流场，将抽象的流场数据计算结果以矢量箭头图形方式进行显示，通过设置箭头的半径、长度、颜色等属性，用来表征网格点上水流的方向及流速大小。</p>
 
 					      <div class="categories">昆明市环境监测中心项目</div>			               
 					   </div>
 
 			         <div class="link-box">
-			            <a href="#">Details</a>
+			            <a href="javascript:void(0)">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -599,13 +600,13 @@
 
 					   <div class="description-box">
 					      <h4>地下空间三维建模与分析系统</h4>		      
-					      <p>后续补充……</p>
+					      <p>该系统主要是对城市地下三维空间进行建模和分析，主要功能包括钻孔/矢量/栅格数据的管理、钻孔信息的查询、三维建模、网格剖分以及空间分析（线性变换、挖方分析、模型切块）操作。</p>
 
 					      <div class="categories">软件著作权</div>			               
 					   </div>
 
 			         <div class="link-box">
-			            <a href="#">Details</a>
+			            <a href="javascript:void(0)">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -619,13 +620,13 @@
 
 					   <div class="description-box">
 					      <h4>邳州市地下水脆弱性评价</h4>		      
-					      <p>后续补充……</p>
+					      <p>采用基于 DRASTIC 的模糊评价模型来评价邳州市孔隙含水岩组、裂隙孔隙含水岩组与裂隙含水岩组的地下水脆弱性。</p>
 
 					      <div class="categories">邳州市水利局</div>			               
 					   </div>
 
 			         <div class="link-box">
-			            <a href="#">Details</a>
+			            <a href="javascript:void(0)">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
