加入了 keepcoding 作为项目经历

--- a/index.html
+++ b/index.html
@@ -337,7 +337,26 @@
 						   <span><h5 style="display: inline;">工作描述：</h5>作为主要负责人，完成了蓝藻水华漂移机理与可视化研究，模拟了蓝藻水华空间分布特征及动态演化过程，并完成了滇池蓝藻水华漂移系统的研发。</span>
 	   				</div>
 
-	   			</div> <!-- /timeline-block -->
+				   </div> <!-- /timeline-block -->
+
+				   <div class="timeline-block">
+
+					<div class="timeline-ico">
+						 <i class="fa fa-briefcase"></i>
+					</div>
+
+					<div class="timeline-header">
+						<h3>自主学习计划</h3>
+						<p>2017.04 - 2018.05</p>
+					</div>
+
+					<div class="timeline-content">
+						<h4>KeepCoding——天天码代码计划  |  坚持者</h4>
+						<span><h5 style="display: inline;">项目描述：</h5>不属于严谨意义上的项目，是自己为了提高自己码代码能力而自主建立的一个坚持计划。每天练习一点代码，是代码能力的提升，也是逻辑思维能力的一种锻炼。项目地址：<a href="http://blog.renkaigis.com/KeepCoding/" style="color: #6e6e6e;" target="_blank">http://blog.renkaigis.com/KeepCoding/</a></span></br>
+						<span><h5 style="display: inline;">工作描述：</h5>天天坚持码代码，虽然经常一次性填坑 -_-!</span>
+					</div>
+
+				</div> <!-- /timeline-block -->
 
    			</div> <!-- /timeline-wrap -->   			
 
