--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
 
 		 <h3>技能证书：</h3>
 		 <ul class="disc">
-				<li>英语六级证书</li>
+				<!-- <li>英语六级证书</li> -->
 				<li>三级网络技术证书</li>
 				<li>普通话一级乙等证书</li>
 			</ul>
