--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
    	<div class="row button-section">
    		<div class="col-twelve">
    			<a href="#contact" title="Contact Me" class="button stroke smoothscroll">Contact Me</a>
-   			<a href="http://d.renkaigis.com/resume/Resume_RenKai.pdf" title="Download CV" class="button button-primary">Download CV</a>
+   			<a href="http://d.renkaigis.com/resume/Resume_RenKai.pdf" title="Download CV" class="button button-primary" target="__blank">Download CV</a>
    		</div>   		
    	</div>
 
@@ -313,7 +313,7 @@
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>滇池蓝藻水华遥感监测及预警体系研究  |  负责人</h4>
+	   					<h4>邳州市地下水脆弱性评价  |  负责人</h4>
 	   					<span><h5 style="display: inline;">项目描述：</h5>基于 ArcGIS 软件、C# 开发，根据江苏省邳州市的地质数据、气象数据和自然地理数据等相关数据，通过理论分析与区域水文地质特征，并结合专家知识经验，确定地下水评价的指标体系及权重因子，完成对江苏省邳州市地下水脆弱性的评价工作；</span></br>
 						   <span><h5 style="display: inline;">工作描述：</h5>负责数据预处理，确定评价体系与权重因子，进行地下水脆弱性评价并出图。</span>
 	   				</div>
