--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
 	   			<h1>I'm Ren kai.</h1>
 
 	   			<p class="intro-position">
-					<span>Java Software Engineer</span> 
-	   				<span>Front-end Developer</span>
+							<span>GIS Software Engineer</span>
+							<span>Java Software Engineer</span> 
 	   			</p>
 
 	   			<a class="button stroke smoothscroll" href="#about" title="">More About Me</a>
@@ -139,8 +139,9 @@
    					<span>90 后</span>
    				</li>
    				<li>
-   					<strong>Job:</strong>
-   					<span>Student</span>
+   					<strong>Research:</strong>
+						 <span>湖泊水动力数值模型模拟、地理信息系统建模模拟</span>
+
    				</li>
    				<li>
    					<strong>Website:</strong>
@@ -384,25 +385,40 @@
 						</thead>
 						<tbody>
 						  <tr>
-							<td>《地学模型模拟动态可视化系统》</td>
-							<td>2017SR374929</td>
-							<td>2017-07-17</td>				    
+								<td>《地学模型模拟动态可视化系统》</td>
+								<td>2017SR374929</td>
+								<td>2017-07-17</td>				    
 						  </tr>
 						  <tr>
-							<td>《地学模拟多维网格自适应生成系统》</td>
-							<td>2017SR374939</td>
-							<td>2017-07-17</td>	    
+								<td>《地学模拟多维网格自适应生成系统》</td>
+								<td>2017SR374939</td>
+								<td>2017-07-17</td>	    
 						  </tr>
 						   <tr>
-							<td>《地下空间三维建模与分析系统》</td>
-							<td>2017SR431955</td>
-							<td>2017-08-06</td>				    
+								<td>《地下空间三维建模与分析系统》</td>
+								<td>2017SR431955</td>
+								<td>2017-08-06</td>				    
 						  </tr>
 						  <tr>
-							<td>《水文地质建模与模拟系统》</td>
-							<td>2017SR427979</td>
-							<td>2017-08-07</td>	    
-						  </tr>
+								<td>《水文地质建模与模拟系统》</td>
+								<td>2017SR427979</td>
+								<td>2017-08-07</td>	    
+							</tr>
+							<tr>
+								<td>《大型水体总悬浮物模拟系统》</td>
+								<td>2018SR798096</td>
+								<td>2018-10-08</td>	    
+							</tr>
+							<tr>
+								<td>《滇池水体蓝藻水华漂移模拟系统》</td>
+								<td>2018SR955442</td>
+								<td>2018-11-29</td>	    
+							</tr>
+							<tr>
+								<td>《层状地质体结构面识别与智能分析系统》</td>
+								<td>已提交，待发表</td>
+								<td>2000-00-00</td>	    
+							</tr>
 						</tbody>
 					  </table>
   
