修改图片存储路径

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 			<li><a href="https://github.com/renkaigis"><i class="fa fa-github"></i></a></li>
 			<li><a href="https://weibo.com/renkai123"><i class="fa fa-weibo"></i></a></li>
 			<li><a href="https://www.facebook.com/renkaigis"><i class="fa fa-facebook"></i></a></li>
-			<li><a href="mailto:renkaigis@foxmail.com"><i class="fa fa-envelope"></i></a></li>
+			<li><a href="mailto:renkaigis@gmail.com"><i class="fa fa-envelope"></i></a></li>
 			<li><a href="http://photo.renkaigis.com/"><i class="fa fa-camera"></i></a></li>
 		</ul> <!-- /intro-social -->
 
@@ -122,7 +122,7 @@
 
 				<div class="intro-info">
 
-					<img src="images/profile-pic.jpg" alt="Profile Picture">
+					<img src="http://pic.renkaigis.com/resume/images/profile-pic.jpg" alt="Profile Picture">
 
 					<p class="lead">热情随和，活波开朗，具有进取精神和团队精神，有较强的动手潜力。</p>
 					<p class="lead">热爱学习，热爱跑步，热爱摄影，热爱生活！</p>
@@ -158,7 +158,7 @@
 					</li>
 					<li>
 						<strong>Email:</strong>
-						<span><a href="mailto:renkaigis@foxmail.com">renkaigis@foxmail.com</a></span>
+						<span><a href="mailto:renkaigis@gmail.com">renkaigis@gmail.com</a></span>
 					</li>
 
 				</ul> <!-- /info-list -->
@@ -514,7 +514,7 @@
 
 					<div class="bgrid folio-item">
 						<div class="item-wrap">
-							<img src="images/portfolio/work01.png">
+							<img src="http://pic.renkaigis.com/resume/images/portfolio/work01.png">
 							<a href="#modal-01" class="overlay">
 								<div class="folio-item-table">
 									<div class="folio-item-cell">
@@ -530,7 +530,7 @@
 
 					<div class="bgrid folio-item">
 						<div class="item-wrap">
-							<img src="images/portfolio/work02.png">
+							<img src="http://pic.renkaigis.com/resume/images/portfolio/work02.png">
 							<a href="#modal-02" class="overlay">
 								<div class="folio-item-table">
 									<div class="folio-item-cell">
@@ -546,7 +546,7 @@
 
 					<div class="bgrid folio-item">
 						<div class="item-wrap">
-							<img src="images/portfolio/work03.png">
+							<img src="http://pic.renkaigis.com/resume/images/portfolio/work03.png">
 							<a href="#modal-03" class="overlay">
 								<div class="folio-item-table">
 									<div class="folio-item-cell">
@@ -562,7 +562,7 @@
 
 					<div class="bgrid folio-item">
 						<div class="item-wrap">
-							<img src="images/portfolio/work04.png">
+							<img src="http://pic.renkaigis.com/resume/images/portfolio/work04.png">
 							<a href="#modal-04" class="overlay">
 								<div class="folio-item-table">
 									<div class="folio-item-cell">
@@ -578,7 +578,7 @@
 
 					<div class="bgrid folio-item">
 						<div class="item-wrap">
-							<img src="images/portfolio/work05.png">
+							<img src="http://pic.renkaigis.com/resume/images/portfolio/work05.png">
 							<a href="#modal-05" class="overlay">
 								<div class="folio-item-table">
 									<div class="folio-item-cell">
@@ -594,7 +594,7 @@
 
 					<div class="bgrid folio-item">
 						<div class="item-wrap">
-							<img src="images/portfolio/work06.png" alt="Salad">
+							<img src="http://pic.renkaigis.com/resume/images/portfolio/work06.png" alt="Salad">
 							<a href="#modal-06" class="overlay">
 								<div class="folio-item-table">
 									<div class="folio-item-cell">
@@ -614,7 +614,7 @@
 					<div id="modal-01" class="popup-modal slider mfp-hide">
 
 						<div class="media">
-							<img src="images/portfolio/modals/work01.png" alt="" />
+							<img src="http://pic.renkaigis.com/resume/images/portfolio/modals/work01.png" alt="" />
 						</div>
 
 						<div class="description-box">
@@ -635,7 +635,7 @@
 					<div id="modal-02" class="popup-modal slider mfp-hide">
 
 						<div class="media">
-							<img src="images/portfolio/modals/work02.png" alt="" />
+							<img src="http://pic.renkaigis.com/resume/images/portfolio/modals/work02.png" alt="" />
 						</div>
 
 						<div class="description-box">
@@ -655,7 +655,7 @@
 					<div id="modal-03" class="popup-modal slider mfp-hide">
 
 						<div class="media">
-							<img src="images/portfolio/modals/work03.png" alt="" />
+							<img src="http://pic.renkaigis.com/resume/images/portfolio/modals/work03.png" alt="" />
 						</div>
 
 						<div class="description-box">
@@ -676,7 +676,7 @@
 					<div id="modal-04" class="popup-modal slider mfp-hide">
 
 						<div class="media">
-							<img src="images/portfolio/modals/work04.png" alt="" />
+							<img src="http://pic.renkaigis.com/resume/images/portfolio/modals/work04.png" alt="" />
 						</div>
 
 						<div class="description-box">
@@ -696,7 +696,7 @@
 					<div id="modal-05" class="popup-modal slider mfp-hide">
 
 						<div class="media">
-							<img src="images/portfolio/modals/work05.png" alt="" />
+							<img src="http://pic.renkaigis.com/resume/images/portfolio/modals/work05.png" alt="" />
 						</div>
 
 						<div class="description-box">
@@ -716,7 +716,7 @@
 					<div id="modal-06" class="popup-modal slider mfp-hide">
 
 						<div class="media">
-							<img src="images/portfolio/modals/work06.png" alt="" />
+							<img src="http://pic.renkaigis.com/resume/images/portfolio/modals/work06.png" alt="" />
 						</div>
 
 						<div class="description-box">
@@ -937,8 +937,7 @@
 
 				<h5>Email Me At</h5>
 
-				<p><a href="mailto:renkaigis@foxmail.com" style="color:#888888">renkaigis@foxmail.com</a><br>
-					<a href="mailto:renkaigis@gmail.com" style="color:#888888">renkaigis@gmail.com</a>
+				<p><a href="mailto:renkaigis@gmail.com" style="color:#888888">renkaigis@gmail.com</a>
 				</p>
 
 			</div>
@@ -974,7 +973,7 @@
 					<li><a href="https://github.com/renkaigis"><i class="fa fa-github"></i></a></li>
 					<li><a href="https://weibo.com/renkai123"><i class="fa fa-weibo"></i></a></li>
 					<li><a href="https://www.facebook.com/renkaigis"><i class="fa fa-facebook"></i></a></li>
-					<li><a href="mailto:renkaigis@foxmail.com"><i class="fa fa-envelope"></i></a></li>
+					<li><a href="mailto:renkaigis@gmail.com"><i class="fa fa-envelope"></i></a></li>
 					<li><a href="http://photo.renkaigis.com/"><i class="fa fa-camera"></i></a></li>
 				</ul>
 
@@ -982,7 +981,7 @@
 
 			<div class="col-six tab-full">
 				<div class="copyright">
-					<span>© Copyright RenKai 2018-2020.</span>
+					<span>© Copyright RenKai 2018-2021.</span>
 				</div>
 			</div>
 
