--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 	<!-- favicons
 	================================================== -->
-	<link rel="icon" type="image/png" href="favicon.png">
+	<link rel="icon" type="image" href="images/favicon.ico">
 
 </head>
 
@@ -257,7 +257,7 @@
 						<div class="timeline-content">
 							<h4>南京师范大学 - 地理科学学院 - 地图学与地理信息系统</h4>
 							<p>
-								<h5>主修课程：</h5>地理信息系统原理、遥感数字图像处理、虚拟现实与 GIS 新媒体、现代地图学、地理信息系统技术、数值计算、现代自然地理学、GIS 地学分析等。
+							<h5>主修课程：</h5>地理信息系统原理、遥感数字图像处理、虚拟现实与 GIS 新媒体、现代地图学、地理信息系统技术、数值计算、现代自然地理学、GIS 地学分析等。
 							</p>
 						</div>
 
@@ -277,9 +277,9 @@
 						<div class="timeline-content">
 							<h4>西北农林科技大学 - 资源环境学院 - 地理信息系统</h4>
 							<p>
-								<h5>主修课程：</h5>
-								数据库原理与应用、数字测图原理与方法、遥感原理与方法、面向对象程序设计、遥感数字图像处理、地理信息系统、遥感图像分析应用、资源环境信息系统、数字摄影测量学、Web
-								地理信息系统、空间分析与模型等。
+							<h5>主修课程：</h5>
+							数据库原理与应用、数字测图原理与方法、遥感原理与方法、面向对象程序设计、遥感数字图像处理、地理信息系统、遥感图像分析应用、资源环境信息系统、数字摄影测量学、Web
+							地理信息系统、空间分析与模型等。
 							</p>
 						</div>
 
@@ -592,7 +592,7 @@
 						</div>
 					</div> <!-- /folio-item -->
 
-					<div class="bgrid folio-item">
+					<!-- <div class="bgrid folio-item">
 						<div class="item-wrap">
 							<img src="http://pic.renkaigis.com/resume/images/portfolio/work06.png" alt="Salad">
 							<a href="#modal-06" class="overlay">
@@ -606,7 +606,8 @@
 								</div>
 							</a>
 						</div>
-					</div> <!-- /folio-item -->
+					</div>  -->
+					<!-- /folio-item -->
 
 
 					<!-- modal popups - begin
@@ -981,7 +982,7 @@
 
 			<div class="col-six tab-full">
 				<div class="copyright">
-					<span>© Copyright RenKai 2018-2021.</span>
+					<span>© Copyright RenKai 2018-<span id="currentYear"></span>.</span>
 				</div>
 			</div>
 
@@ -992,15 +993,16 @@
 		</div> <!-- /row -->
 	</footer>
 
-	<div id="preloader">
+	<!-- <div id="preloader">
 		<div id="loader"></div>
-	</div>
+	</div> -->
 
 	<!-- Java Script
    ================================================== -->
 	<script src="js/jquery-2.1.3.min.js"></script>
 	<script src="js/plugins.js"></script>
 	<script src="js/main.js"></script>
+	<script src="js/myCustom.js" type="text/javascript"></script>
 
 </body>
 
