--- a/index.html
+++ b/index.html
@@ -866,7 +866,7 @@
 
 						<h3>Photography</h3>
 
-						<p class="desc">业余爱好摄影拍照，可是没有相机，常用设备 iPhone 8P。PS 不熟练又麻烦，所以后期常用美图秀秀一键搞定。喜欢拍风景、静物，也喜欢拍人，但是不会教人摆
+						<p class="desc">业余爱好摄影拍照，可是没有相机，常用设备 iPhone X。PS 不熟练又麻烦，所以后期常用美图秀秀一键搞定。喜欢拍风景、静物，也喜欢拍人，但是不会教人摆
 							pose。我的摄影作品在这里：<a href="http://photo.renkaigis.com"
 								style="color: rgba(255, 255, 255, 0.6)">http://photo.renkaigis.com</a>
 						</p>
