--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
 
 					</div> <!-- /timeline-block -->
 
-					<div class="timeline-block">
+					<!-- <div class="timeline-block">
 
 						<div class="timeline-ico">
 							<i class="fa fa-briefcase"></i>
@@ -401,7 +401,8 @@
 							</span>
 						</div>
 
-					</div> <!-- /timeline-block -->
+					</div>  -->
+					<!-- /timeline-block -->
 
 				</div> <!-- /timeline-wrap -->
 
@@ -470,7 +471,7 @@
 
 			<h3>技能证书：</h3>
 			<ul class="disc">
-				<!-- <li>英语六级证书</li> -->
+				<li>英语六级</li>
 				<li>三级网络技术证书</li>
 				<li>普通话一级乙等证书</li>
 			</ul>
@@ -592,7 +593,7 @@
 						</div>
 					</div> <!-- /folio-item -->
 
-					<!-- <div class="bgrid folio-item">
+					<div class="bgrid folio-item">
 						<div class="item-wrap">
 							<img src="http://pic.renkaigis.com/resume/images/portfolio/work06.png" alt="Salad">
 							<a href="#modal-06" class="overlay">
@@ -606,7 +607,7 @@
 								</div>
 							</a>
 						</div>
-					</div>  -->
+					</div>
 					<!-- /folio-item -->
 
 
