--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<!--- basic page needs
    ================================================== -->
 	<meta charset="utf-8">
-	<title>Resume | RenKai</title>
+	<title>Resume | Kai Ren's Electronic Resume</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
@@ -84,7 +84,7 @@
 				<div class="col-twelve">
 
 					<h5>Hello, World.</h5>
-					<h1>I'm Ren kai.</h1>
+					<h1>I'm Kai Ren.</h1>
 
 					<p class="intro-position">
 						<span>GIS Software Engineer</span>
