--- a/index.html
+++ b/index.html
@@ -251,11 +251,11 @@
 
 						<div class="timeline-header">
 							<h3>硕士</h3>
-							<p>2016.09 至今</p>
+							<p>2016.09 - 2019.06</p>
 						</div>
 
 						<div class="timeline-content">
-							<h4>南京师范大学 - 地理科学学院 - 地图学与地理信息系统</h4>
+							<h4>南京师范大学 - 地理科学学院 & 虚拟地理环境教育部重点实验室 - 地图学与地理信息系统</h4>
 							<p>
 							<h5>主修课程：</h5>地理信息系统原理、遥感数字图像处理、虚拟现实与 GIS 新媒体、现代地图学、地理信息系统技术、数值计算、现代自然地理学、GIS 地学分析等。
 							</p>
