--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 						<div class="timeline-content">
 							<h4>南京师范大学 - 地理科学学院 & 虚拟地理环境教育部重点实验室 - 地图学与地理信息系统</h4>
 							<p>
-							<h5>主修课程：</h5>地理信息系统原理、遥感数字图像处理、虚拟现实与 GIS 新媒体、现代地图学、地理信息系统技术、数值计算、现代自然地理学、GIS 地学分析等。
+								<h5>主修课程：</h5>地理信息系统原理、遥感数字图像处理、虚拟现实与 GIS 新媒体、现代地图学、地理信息系统技术、数值计算、现代自然地理学、GIS 地学分析等。
 							</p>
 						</div>
 
@@ -277,9 +277,9 @@
 						<div class="timeline-content">
 							<h4>西北农林科技大学 - 资源环境学院 - 地理信息系统</h4>
 							<p>
-							<h5>主修课程：</h5>
-							数据库原理与应用、数字测图原理与方法、遥感原理与方法、面向对象程序设计、遥感数字图像处理、地理信息系统、遥感图像分析应用、资源环境信息系统、数字摄影测量学、Web
-							地理信息系统、空间分析与模型等。
+								<h5>主修课程：</h5>
+								数据库原理与应用、数字测图原理与方法、遥感原理与方法、面向对象程序设计、遥感数字图像处理、地理信息系统、遥感图像分析应用、资源环境信息系统、数字摄影测量学、Web
+								地理信息系统、空间分析与模型等。
 							</p>
 						</div>
 
@@ -983,8 +983,17 @@
 
 			<div class="col-six tab-full">
 				<div class="copyright">
-					<span>© Copyright RenKai 2018-<span id="currentYear"></span>.</span>
+					<a target="_blank"
+						href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=61909002000104"
+						style="display:inline-block;text-decoration:none;height:20px;line-height:20px;"><img
+							src="images/beian.png" style="float:left;" />
+						<p style="float:left;height:20px;line-height:20px;margin: 0px 0px 0px 5px; color:#6e6e6e;">陕公网安备
+							61909002000104号</p>
+					</a><span>© Copyright RenKai 2018-<span id="currentYear"></span>.</span>
 				</div>
+				<!-- <div class="copyright">
+					<span>© Copyright RenKai 2018-<span id="currentYear"></span>.</span>
+				</div> -->
 			</div>
 
 			<div id="go-top">
