--- a/index.html
+++ b/index.html
@@ -121,23 +121,18 @@
 				<h1>Let me introduce myself.</h1>
 
 				<div class="intro-info">
-
 					<img src="http://pic.renkaigis.com/resume/images/profile-pic.jpg" alt="Profile Picture">
-
 					<p class="lead">热情随和，活波开朗，具有进取精神和团队精神，有较强的动手潜力。</p>
 					<p class="lead">热爱学习，热爱跑步，热爱摄影，热爱生活！</p>
 				</div>
-
 			</div>
 		</div> <!-- /section-intro -->
 
 		<div class="row about-content">
 
 			<div class="col-six tab-full">
-
 				<h3>Profile</h3>
 				<p>倔强的金牛座 ♉ 小男生一枚。拖延症患者。起床困难户。夜猫子。阳光男孩。</p>
-
 				<ul class="info-list">
 					<li>
 						<strong>Fullname:</strong>
@@ -149,8 +144,7 @@
 					</li>
 					<li>
 						<strong>Research:</strong>
-						<span>湖泊水动力数值模型模拟、地理信息系统建模模拟</span>
-
+						<span>湖泊水动力数值模型模拟、地理信息系统建模模拟、后端系统开发</span>
 					</li>
 					<li>
 						<strong>Website:</strong>
@@ -160,16 +154,12 @@
 						<strong>Email:</strong>
 						<span><a href="mailto:renkaigis@gmail.com">renkaigis@gmail.com</a></span>
 					</li>
-
 				</ul> <!-- /info-list -->
-
 			</div>
 
 			<div class="col-six tab-full">
-
 				<h3>Skills</h3>
 				<p>熟练掌握 ArcGIS、Erdas、ENVI 等 GIS 软件；精通 Java，掌握 C++、C#、HTML+CSS+JS、Python 等语言。</p>
-
 				<ul class="skill-bars">
 					<li>
 						<div class="progress percent90"><span>85%</span></div>
@@ -195,11 +185,8 @@
 						<div class="progress percent70"><span>70%</span></div>
 						<strong>C++</strong>
 					</li>
-
 				</ul> <!-- /skill-bars -->
-
 			</div>
-
 		</div>
 
 		<div class="row button-section">
@@ -209,7 +196,6 @@
 					class="button button-primary" target="__blank">Download CV</a>
 			</div>
 		</div>
-
 	</section> <!-- /process-->
 
 
@@ -232,48 +218,35 @@
 		</div> <!-- /section-intro-->
 
 		<div class="row resume-timeline">
-
 			<div class="col-twelve resume-header">
-
 				<h2>教育程度（Education）</h2>
-
 			</div> <!-- /resume-header -->
-
 			<div class="col-twelve">
-
 				<div class="timeline-wrap">
-
 					<div class="timeline-block">
-
 						<div class="timeline-ico">
 							<i class="fa fa-graduation-cap"></i>
 						</div>
-
 						<div class="timeline-header">
 							<h3>硕士</h3>
 							<p>2016.09 - 2019.06</p>
 						</div>
-
 						<div class="timeline-content">
 							<h4>南京师范大学 - 地理科学学院 & 虚拟地理环境教育部重点实验室 - 地图学与地理信息系统</h4>
 							<p>
 								<h5>主修课程：</h5>地理信息系统原理、遥感数字图像处理、虚拟现实与 GIS 新媒体、现代地图学、地理信息系统技术、数值计算、现代自然地理学、GIS 地学分析等。
 							</p>
 						</div>
-
 					</div> <!-- /timeline-block -->
 
 					<div class="timeline-block">
-
 						<div class="timeline-ico">
 							<i class="fa fa-graduation-cap"></i>
 						</div>
-
 						<div class="timeline-header">
 							<h3>本科</h3>
 							<p>2012.09 - 2016.06</p>
 						</div>
-
 						<div class="timeline-content">
 							<h4>西北农林科技大学 - 资源环境学院 - 地理信息系统</h4>
 							<p>
@@ -282,38 +255,52 @@
 								地理信息系统、空间分析与模型等。
 							</p>
 						</div>
-
 					</div> <!-- /timeline-block -->
-
 				</div> <!-- /timeline-wrap -->
-
 			</div> <!-- /col-twelve -->
-
 		</div> <!-- /resume-timeline -->
 
 		<div class="row resume-timeline">
-
 			<div class="col-twelve resume-header">
-
-				<h2>项目经历（Work Experience）</h2>
-
+				<h2>工作经历（Job Experiences）</h2>
 			</div> <!-- /resume-header -->
-
 			<div class="col-twelve">
-
 				<div class="timeline-wrap">
-
 					<div class="timeline-block">
-
 						<div class="timeline-ico">
 							<i class="fa fa-briefcase"></i>
 						</div>
+						<div class="timeline-header">
+							<h3>央企</h3>
+							<p>2019.06 - 2020.07</p>
+						</div>
+						<div class="timeline-content">
+							<h4>中国兵器工业集团 - 北方信息控制研究院集团有限公司</h4>
+							<p>
+								<h5>工作内容：</h5>
+								北斗事业部 - 北斗高精度定位系统及军民应用软件系统的设计与开发，主要涉及前端网页开发，后端接口开发，数据库管理维护等。<i
+									class="fa fa-asterisk"></i>绝密<i class="fa fa-asterisk"></i>
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 
+		<div class="row resume-timeline">
+			<div class="col-twelve resume-header">
+				<h2>项目经历（Work Experience）</h2>
+			</div> <!-- /resume-header -->
+			<div class="col-twelve">
+				<div class="timeline-wrap">
+					<div class="timeline-block">
+						<div class="timeline-ico">
+							<i class="fa fa-briefcase"></i>
+						</div>
 						<div class="timeline-header">
 							<h3>国家级科创项目</h3>
 							<p>2013.12 - 2015.06</p>
 						</div>
-
 						<div class="timeline-content">
 							<h4>《黄土坡耕地微地形数值模拟及机理研究》 | 负责人</h4>
 							<span>
@@ -325,20 +312,15 @@
 								作为项目总负责人，统筹规划，确定实验方案，带领组员开展黄土坡耕地坡面侵蚀形态演变的试验研究，并进行数据模拟及检验。
 							</span>
 						</div>
-
 					</div> <!-- /timeline-block -->
-
 					<div class="timeline-block">
-
 						<div class="timeline-ico">
 							<i class="fa fa-briefcase"></i>
 						</div>
-
 						<div class="timeline-header">
 							<h3>邳州市水利局项目</h3>
 							<p>2017.04 - 2018.05</p>
 						</div>
-
 						<div class="timeline-content">
 							<h4>邳州市地下水脆弱性评价 | 负责人</h4>
 							<span>
@@ -349,20 +331,16 @@
 								<h5 style="display: inline;">工作描述：</h5>负责数据预处理，确定评价体系与权重因子，进行地下水脆弱性评价并出图。
 							</span>
 						</div>
-
 					</div> <!-- /timeline-block -->
 
 					<div class="timeline-block">
-
 						<div class="timeline-ico">
 							<i class="fa fa-briefcase"></i>
 						</div>
-
 						<div class="timeline-header">
 							<h3>昆明市环境监测中心项目</h3>
 							<p>2017.04 - 2018.05</p>
 						</div>
-
 						<div class="timeline-content">
 							<h4>滇池蓝藻水华遥感监测及预警体系研究 | 负责人</h4>
 							<span>
@@ -412,14 +390,11 @@
 
 		<div class="row resume-timeline">
 			<div class="col-twelve resume-header">
-
 				<h2>成果奖项（Achievements &amp; Awards）</h2>
-
 			</div> <!-- /resume-header -->
 
 			<h3>软件著作权：</h3>
 			<div class="table-responsive">
-
 				<table>
 					<thead style="text-align: center;">
 						<tr>
@@ -466,7 +441,6 @@
 						</tr>
 					</tbody>
 				</table>
-
 			</div>
 
 			<h3>技能证书：</h3>
@@ -507,12 +481,10 @@
 		</div> <!-- /section-intro-->
 
 		<div class="row portfolio-content">
-
 			<div class="col-twelve">
 
 				<!-- portfolio-wrapper -->
 				<div id="folio-wrapper" class="block-1-2 block-mob-full stack">
-
 					<div class="bgrid folio-item">
 						<div class="item-wrap">
 							<img src="http://pic.renkaigis.com/resume/images/portfolio/work01.png">
