--- a/index.html
+++ b/index.html
@@ -801,46 +801,35 @@
 				</div> <!-- /service -->
 
 				<div class="service">
-
 					<span class="icon"><i class="icon-toggles"></i></span>
-
 					<div class="service-content">
-
 						<h3>Web Development</h3>
-
 						<p class="desc">精通 JavaWeb 开发，整合 SSH 框架开发 Web
 							应用。熟练前端（HTML+CSS+JS、Angular、Vue）、后端开发（SSH、SSM）与数据库设计（MySQL、SQL Server）。
 						</p>
-
 					</div>
+				</div>
 
-					<!-- </div> 
+				<div class="service">
+					<span class="icon"><i class="icon-layers"></i></span>
+					<div class="service-content">
+						<h3>Google Earth Engine</h3>
+						<p class="desc">
+							GEE 开发与遥感影像处理。
+						</p>
+					</div>
+				</div>
 
 				<div class="service">
 
-					<span class="icon"><i class="icon-toggles"></i></span>	              
-
-	            <div class="service-content">
-
-	            	<h3>UI/UX Design</h3>
-
-		            <p class="desc">
-	         		</p> 
-	         		
-	            </div>                 -->
-
-				</div> <!-- /service -->
-
-				<div class="service">
-
-					<span class="icon"><i class="icon-image"></i></span>
+					<span class="icon"><i class="icon-camera"></i></span>
 
 					<div class="service-content">
 
 						<h3>Photography</h3>
 
-						<p class="desc">业余爱好摄影拍照，可是没有相机，常用设备 iPhone X。PS 不熟练又麻烦，所以后期常用美图秀秀一键搞定。喜欢拍风景、静物，也喜欢拍人，但是不会教人摆
-							pose。我的摄影作品在这里：<a href="http://photo.renkaigis.com"
+						<p class="desc">业余爱好摄影拍照，常用设备 iPhone 12 Pro Max，佳能微单 M200。PS
+							不熟练又麻烦，所以后期常用美图秀秀一键搞定。喜欢拍风景、静物，也喜欢拍人像。我的摄影作品在这里：<a href="http://photo.renkaigis.com"
 								style="color: rgba(255, 255, 255, 0.6)">http://photo.renkaigis.com</a>
 						</p>
 
