--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 				<h1>Let me introduce myself.</h1>
 
 				<div class="intro-info">
-					<img src="http://pic.renkaigis.com/resume/images/profile-pic.jpg" alt="Profile Picture">
+					<img src="./images/profile-pic.jpg" alt="Profile Picture">
 					<p class="lead">热情随和，活波开朗，具有进取精神和团队精神，有较强的动手潜力。</p>
 					<p class="lead">热爱学习，热爱跑步，热爱摄影，热爱生活！</p>
 				</div>
@@ -144,7 +144,7 @@
 					</li>
 					<li>
 						<strong>Research:</strong>
-						<span>湖泊水动力数值模型模拟、地理信息系统建模模拟、后端系统开发</span>
+						<span>湖泊水动力数值模型模拟 | 地理信息系统建模模拟 | 前后端系统开发</span>
 					</li>
 					<li>
 						<strong>Website:</strong>
@@ -162,8 +162,8 @@
 				<p>熟练掌握 ArcGIS、Erdas、ENVI 等 GIS 软件；精通 Java，掌握 C++、C#、HTML+CSS+JS、Python 等语言。</p>
 				<ul class="skill-bars">
 					<li>
-						<div class="progress percent90"><span>85%</span></div>
-						<strong>Spring Boot</strong>
+						<div class="progress percent90"><span>90%</span></div>
+						<strong>Java + Spring Boot</strong>
 					</li>
 					<li>
 						<div class="progress percent95"><span>95%</span></div>
@@ -171,11 +171,7 @@
 					</li>
 					<li>
 						<div class="progress percent70"><span>70%</span></div>
-						<strong>Erdas、ENVI</strong>
-					</li>
-					<li>
-						<div class="progress percent90"><span>90%</span></div>
-						<strong>JAVA</strong>
+						<strong>Erdas / ENVI</strong>
 					</li>
 					<li>
 						<div class="progress percent60"><span>60%</span></div>
@@ -183,7 +179,11 @@
 					</li>
 					<li>
 						<div class="progress percent70"><span>70%</span></div>
-						<strong>C++</strong>
+						<strong>C++ / C#</strong>
+					</li>
+					<li>
+						<div class="progress percent50"><span>50%</span></div>
+						<strong>Vue</strong>
 					</li>
 				</ul> <!-- /skill-bars -->
 			</div>
