--- a/index.html
+++ b/index.html
@@ -159,7 +159,8 @@
 
 			<div class="col-six tab-full">
 				<h3>Skills</h3>
-				<p>熟练掌握 ArcGIS、Erdas、ENVI 等 GIS 软件；精通 Java，掌握 C++、C#、HTML+CSS+JS、Python 等语言。</p>
+				<p>熟练掌握 ArcGIS、Erdas、ENVI 等 GIS 软件；精通 Java，掌握 C++、C#、HTML+CSS+JS、Python 等语言，熟悉 Vue.js、Spring boot
+					等前后端框架。</p>
 				<ul class="skill-bars">
 					<li>
 						<div class="progress percent90"><span>90%</span></div>
