--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 				<h1>Let me introduce myself.</h1>
 
 				<div class="intro-info">
-					<img src="/images/profile-pic.jpg" alt="Profile Picture">
+					<img src="images/profile-pic.jpg" alt="Profile Picture">
 					<p class="lead">热情随和，活波开朗，具有进取精神和团队精神，有较强的动手潜力。</p>
 					<p class="lead">热爱学习，热爱跑步，热爱摄影，热爱生活！</p>
 				</div>
