--- a/index.html
+++ b/index.html
@@ -280,8 +280,9 @@
 							<h4>中国兵器工业集团 - 北方信息控制研究院集团有限公司</h4>
 							<p>
 								<h5>工作内容：</h5>
-								北斗事业部 - 北斗高精度定位系统及军民应用软件系统的设计与开发，主要涉及前端网页开发，后端接口开发，数据库管理维护等。<i
-									class="fa fa-asterisk"></i>绝密<i class="fa fa-asterisk"></i>
+								北斗事业部 - 北斗高精度定位系统及军民应用软件系统的设计与开发，主要涉及前端网页开发，后端接口开发，数据库管理维护等。<span
+									style="color: red;font-weight: 900;"><i class="fa fa-asterisk"></i>绝密<i
+										class="fa fa-asterisk"></i></span>
 							</p>
 						</div>
 					</div>
