--- a/index.html
+++ b/index.html
@@ -99,12 +99,12 @@
 		</div> <!-- /intro-content -->
 
 		<ul class="intro-social">
-			<li><a href="http://renkaigis.com/"><i class="fa fa-heartbeat"></i></a></li>
+			<li><a href="http://renkaigis.cn/"><i class="fa fa-heartbeat"></i></a></li>
 			<li><a href="https://github.com/renkaigis"><i class="fa fa-github"></i></a></li>
 			<li><a href="https://weibo.com/renkai123"><i class="fa fa-weibo"></i></a></li>
 			<li><a href="https://www.facebook.com/renkaigis"><i class="fa fa-facebook"></i></a></li>
 			<li><a href="mailto:renkaigis@gmail.com"><i class="fa fa-envelope"></i></a></li>
-			<li><a href="http://photo.renkaigis.com/"><i class="fa fa-camera"></i></a></li>
+			<li><a href="http://photo.renkaigis.cn/"><i class="fa fa-camera"></i></a></li>
 		</ul> <!-- /intro-social -->
 
 	</section> <!-- /intro -->
@@ -148,7 +148,7 @@
 					</li>
 					<li>
 						<strong>Website:</strong>
-						<span><a href="http://www.renkaigis.com">www.renkaigis.com</a></span>
+						<span><a href="http://www.renkaigis.cn">www.renkaigis.cn</a></span>
 					</li>
 					<li>
 						<strong>Email:</strong>
@@ -374,8 +374,8 @@
 							<span>
 								<h5 style="display: inline;">项目描述：</h5>
 								不属于严谨意义上的项目，是自己为了提高自己码代码能力而自主建立的一个坚持计划。每天练习一点代码，是代码能力的提升，也是逻辑思维能力的一种锻炼。项目地址：<a
-									href="http://blog.renkaigis.com/KeepCoding/" style="color: #6e6e6e;"
-									target="_blank">http://blog.renkaigis.com/KeepCoding/</a>
+									href="http://blog.renkaigis.cn/KeepCoding/" style="color: #6e6e6e;"
+									target="_blank">http://blog.renkaigis.cn/KeepCoding/</a>
 							</span></br>
 							<span>
 								<h5 style="display: inline;">工作描述：</h5>天天坚持码代码，虽然经常一次性填坑 -_-!
@@ -490,7 +490,7 @@
 				<div id="folio-wrapper" class="block-1-2 block-mob-full stack">
 					<div class="bgrid folio-item">
 						<div class="item-wrap">
-							<img src="http://pic.renkaigis.com/resume/images/portfolio/work01.png">
+							<img src="images/portfolio/work01.png">
 							<a href="#modal-01" class="overlay">
 								<div class="folio-item-table">
 									<div class="folio-item-cell">
@@ -506,7 +506,7 @@
 
 					<div class="bgrid folio-item">
 						<div class="item-wrap">
-							<img src="http://pic.renkaigis.com/resume/images/portfolio/work02.png">
+							<img src="images/portfolio/work02.png">
 							<a href="#modal-02" class="overlay">
 								<div class="folio-item-table">
 									<div class="folio-item-cell">
@@ -522,7 +522,7 @@
 
 					<div class="bgrid folio-item">
 						<div class="item-wrap">
-							<img src="http://pic.renkaigis.com/resume/images/portfolio/work03.png">
+							<img src="images/portfolio/work03.png">
 							<a href="#modal-03" class="overlay">
 								<div class="folio-item-table">
 									<div class="folio-item-cell">
@@ -538,7 +538,7 @@
 
 					<div class="bgrid folio-item">
 						<div class="item-wrap">
-							<img src="http://pic.renkaigis.com/resume/images/portfolio/work04.png">
+							<img src="images/portfolio/work04.png">
 							<a href="#modal-04" class="overlay">
 								<div class="folio-item-table">
 									<div class="folio-item-cell">
@@ -554,7 +554,7 @@
 
 					<div class="bgrid folio-item">
 						<div class="item-wrap">
-							<img src="http://pic.renkaigis.com/resume/images/portfolio/work05.png">
+							<img src="images/portfolio/work05.png">
 							<a href="#modal-05" class="overlay">
 								<div class="folio-item-table">
 									<div class="folio-item-cell">
@@ -570,7 +570,7 @@
 
 					<div class="bgrid folio-item">
 						<div class="item-wrap">
-							<img src="http://pic.renkaigis.com/resume/images/portfolio/work06.png" alt="Salad">
+							<img src="images/portfolio/work06.png" alt="Salad">
 							<a href="#modal-06" class="overlay">
 								<div class="folio-item-table">
 									<div class="folio-item-cell">
@@ -591,7 +591,7 @@
 					<div id="modal-01" class="popup-modal slider mfp-hide">
 
 						<div class="media">
-							<img src="http://pic.renkaigis.com/resume/images/portfolio/modals/work01.png" alt="" />
+							<img src="images/portfolio/modals/work01.png" alt="" />
 						</div>
 
 						<div class="description-box">
@@ -612,7 +612,7 @@
 					<div id="modal-02" class="popup-modal slider mfp-hide">
 
 						<div class="media">
-							<img src="http://pic.renkaigis.com/resume/images/portfolio/modals/work02.png" alt="" />
+							<img src="images/portfolio/modals/work02.png" alt="" />
 						</div>
 
 						<div class="description-box">
@@ -632,7 +632,7 @@
 					<div id="modal-03" class="popup-modal slider mfp-hide">
 
 						<div class="media">
-							<img src="http://pic.renkaigis.com/resume/images/portfolio/modals/work03.png" alt="" />
+							<img src="images/portfolio/modals/work03.png" alt="" />
 						</div>
 
 						<div class="description-box">
@@ -653,7 +653,7 @@
 					<div id="modal-04" class="popup-modal slider mfp-hide">
 
 						<div class="media">
-							<img src="http://pic.renkaigis.com/resume/images/portfolio/modals/work04.png" alt="" />
+							<img src="images/portfolio/modals/work04.png" alt="" />
 						</div>
 
 						<div class="description-box">
@@ -673,7 +673,7 @@
 					<div id="modal-05" class="popup-modal slider mfp-hide">
 
 						<div class="media">
-							<img src="http://pic.renkaigis.com/resume/images/portfolio/modals/work05.png" alt="" />
+							<img src="images/portfolio/modals/work05.png" alt="" />
 						</div>
 
 						<div class="description-box">
@@ -693,7 +693,7 @@
 					<div id="modal-06" class="popup-modal slider mfp-hide">
 
 						<div class="media">
-							<img src="http://pic.renkaigis.com/resume/images/portfolio/modals/work06.png" alt="" />
+							<img src="images/portfolio/modals/work06.png" alt="" />
 						</div>
 
 						<div class="description-box">
@@ -704,7 +704,7 @@
 						</div>
 
 						<div class="link-box">
-							<a href="http://www.renkaigis.com">Details</a>
+							<a href="http://www.renkaigis.cn">Details</a>
 							<a href="#" class="popup-modal-dismiss">Close</a>
 						</div>
 
@@ -832,8 +832,8 @@
 						<h3>Photography</h3>
 
 						<p class="desc">业余爱好摄影拍照，常用设备 iPhone 12 Pro Max，佳能微单 M200。PS
-							不熟练又麻烦，所以后期常用美图秀秀一键搞定。喜欢拍风景、静物，也喜欢拍人像。我的摄影作品在这里：<a href="http://photo.renkaigis.com"
-								style="color: rgba(255, 255, 255, 0.6)">http://photo.renkaigis.com</a>
+							不熟练又麻烦，所以后期常用美图秀秀一键搞定。喜欢拍风景、静物，也喜欢拍人像。我的摄影作品在这里：<a href="http://photo.renkaigis.cn"
+								style="color: rgba(255, 255, 255, 0.6)">http://photo.renkaigis.cn</a>
 						</p>
 
 					</div>
@@ -935,12 +935,12 @@
 			<div class="col-six tab-full pull-right social">
 
 				<ul class="footer-social">
-					<li><a href="http://renkaigis.com/"><i class="fa fa-heartbeat"></i></a></li>
+					<li><a href="http://renkaigis.cn/"><i class="fa fa-heartbeat"></i></a></li>
 					<li><a href="https://github.com/renkaigis"><i class="fa fa-github"></i></a></li>
 					<li><a href="https://weibo.com/renkai123"><i class="fa fa-weibo"></i></a></li>
 					<li><a href="https://www.facebook.com/renkaigis"><i class="fa fa-facebook"></i></a></li>
 					<li><a href="mailto:renkaigis@gmail.com"><i class="fa fa-envelope"></i></a></li>
-					<li><a href="http://photo.renkaigis.com/"><i class="fa fa-camera"></i></a></li>
+					<li><a href="http://photo.renkaigis.cn/"><i class="fa fa-camera"></i></a></li>
 				</ul>
 
 			</div>
