--- a/index.html
+++ b/index.html
@@ -230,6 +230,25 @@
 							<i class="fa fa-graduation-cap"></i>
 						</div>
 						<div class="timeline-header">
+							<h3>博士</h3>
+							<p>2020.09 - 至今</p>
+						</div>
+						<div class="timeline-content">
+							<h4>西北农林科技大学 - 资源环境学院 - 土地资源与空间信息技术</h4>
+							<p>
+								<h5>主修课程：</h5>遥感分析原理与方法、土地科学与 3S 技术进展、农业资源与环境科学前沿、高级植物营养学、土壤物理学等。
+							</p>
+							<p>
+								<h5>研究方向：农业保险与极端气候插值预测</h5>
+							</p>
+						</div>
+					</div> <!-- /timeline-block -->
+
+					<div class="timeline-block">
+						<div class="timeline-ico">
+							<i class="fa fa-graduation-cap"></i>
+						</div>
+						<div class="timeline-header">
 							<h3>硕士</h3>
 							<p>2016.09 - 2019.06</p>
 						</div>
@@ -237,6 +256,9 @@
 							<h4>南京师范大学 - 地理科学学院 & 虚拟地理环境教育部重点实验室 - 地图学与地理信息系统</h4>
 							<p>
 								<h5>主修课程：</h5>地理信息系统原理、遥感数字图像处理、虚拟现实与 GIS 新媒体、现代地图学、地理信息系统技术、数值计算、现代自然地理学、GIS 地学分析等。
+							</p>
+							<p>
+								<h5>研究方向：</h5>湖泊水动力数值模型模拟
 							</p>
 						</div>
 					</div> <!-- /timeline-block -->
