--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 								<h5>主修课程：</h5>遥感分析原理与方法、土地科学与 3S 技术进展、农业资源与环境科学前沿、高级植物营养学、土壤物理学等。
 							</p>
 							<p>
-								<h5>研究方向：农业保险与极端气候插值预测</h5>
+								<h5>研究方向：</h5>农业保险与极端气候插值预测
 							</p>
 						</div>
 					</div> <!-- /timeline-block -->
