--- a/index.html
+++ b/index.html
@@ -194,8 +194,10 @@
 		<div class="row button-section">
 			<div class="col-twelve">
 				<a href="#contact" title="Contact Me" class="button stroke smoothscroll">Contact Me</a>
-				<a href="http://d.renkaigis.com/resume/Resume_RenKai1.pdf" title="Download CV"
-					class="button button-primary" target="__blank">Download CV</a>
+				<a href="assets/RenKai_CV.pdf" title="Download CV" class="button button-primary"
+					target="__blank">Download CV</a>
+				<!-- <a href="http://d.renkaigis.com/resume/Resume_RenKai1.pdf" title="Download CV"
+					class="button button-primary" target="__blank">Download CV</a> -->
 			</div>
 		</div>
 	</section> <!-- /process-->
