--- a/index.html
+++ b/index.html
@@ -479,11 +479,16 @@
 
 			<h3>学习活动：</h3>
 			<ul class="disc">
+				<li>参与西北农林科技大学第十届挑战杯大学生创业计划竞赛，并获决赛银奖（2022）</li>
+				<li>2021 年获专业一等奖学金</li>
 				<li>2016、2017 连续两年获专业一等奖学金</li>
-				<li>三次获优秀研究生</li>
-				<li>五次获优秀团员</li>
-				<li>组织三下乡活动“赴安塞水土保持综合试验站调研服务”并获校级“优秀奖”</li>
-				<li>主持并负责国家级科创项目《黄土坡耕地微地形数值模拟及机理研究》并获校级“优秀奖”</li>
+				<li>硕士毕业获南京师范大学 2019 届优秀研究生毕业生</li>
+				<li>五次获优秀研究生（2017校、2017院、2018校、2018院、2019校）</li>
+				<li>两次获校级优秀团员（2017、2018）</li>
+				<li>本科毕业论文获西北农林科技大学优秀毕业论文（2016）</li>
+				<li>组织西北农林科技大学田园使者团队，获校级“优秀奖”（2015）</li>
+				<li>主持并负责国家级科创项目《黄土坡耕地微地形数值模拟及机理研究》并获校级“优秀奖”（2014）</li>
+				<li>组织三下乡活动“赴安塞水土保持综合试验站调研服务”并获校级“优秀奖”（2014）</li>
 			</ul>
 		</div>
 
