--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
 			<div class="col-six tab-full">
 				<h3>Profile</h3>
-				<p>倔强的金牛座 ♉ 男生一枚。拖延症患者。起床困难户。夜猫子。阳光男孩。</p>
+				<p>不求外之美，而求内之秀。</p>
 				<ul class="info-list">
 					<li>
 						<strong>Fullname:</strong>
