--- a/index.html
+++ b/index.html
@@ -479,6 +479,7 @@
 
 			<h3>学习活动：</h3>
 			<ul class="disc">
+				<li>参与第十一届“挑战杯”陕西省大学生创业计划竞赛，并获省级铜奖（2022）</li>
 				<li>参与西北农林科技大学第十届挑战杯大学生创业计划竞赛，并获决赛银奖（2022）</li>
 				<li>2021 年获专业一等奖学金</li>
 				<li>2016、2017 连续两年获专业一等奖学金</li>
