--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 					<h1>I'm Kai Ren.</h1>
 
 					<p class="intro-position">
+						<span>GIS Researcher </span>
 						<span>GIS Software Engineer</span>
-						<span>Java Software Engineer</span>
 					</p>
 
 					<a class="button stroke smoothscroll" href="#about" title="">More About Me</a>
@@ -144,7 +144,7 @@
 					</li>
 					<li>
 						<strong>Research:</strong>
-						<span>湖泊水动力数值模型模拟 | 地理信息系统建模模拟 | 前后端系统开发</span>
+						<span>气象要素空间插值预测 | 地理信息系统建模模拟 | 湖泊水动力数值模型模拟 | 前后端系统开发</span>
 					</li>
 					<li>
 						<strong>Website:</strong>
@@ -159,7 +159,7 @@
 
 			<div class="col-six tab-full">
 				<h3>Skills</h3>
-				<p>熟练掌握 ArcGIS、Erdas、ENVI 等 GIS 软件；精通 Java，掌握 C++、C#、HTML+CSS+JS、Python 等语言，熟悉 Vue.js、Spring boot
+				<p>熟练掌握 ArcGIS、Erdas、ENVI 等 GIS 软件；精通 Java、R 语言，掌握 C++、C#、Python、HTML+CSS+JS 等语言，熟悉 Vue.js、Spring boot
 					等前后端框架。
 				</p>
 				<ul class="skill-bars">
@@ -236,6 +236,8 @@
 							<p>2020.09 - 至今</p>
 						</div>
 						<div class="timeline-content">
+							<h4>Curtin University, Australia - GIS Spatial Analysis
+							</h4>
 							<h4>西北农林科技大学 - 资源环境学院 - 土地资源与空间信息技术</h4>
 							<p>
 								<h5>主修课程：</h5>遥感分析原理与方法、土地科学与 3S 技术进展、农业资源与环境科学前沿、高级植物营养学、土壤物理学等。
@@ -286,10 +288,10 @@
 			</div> <!-- /col-twelve -->
 		</div> <!-- /resume-timeline -->
 
-		<div class="row resume-timeline">
+		<!-- <div class="row resume-timeline">
 			<div class="col-twelve resume-header">
 				<h2>工作经历（Job Experiences）</h2>
-			</div> <!-- /resume-header -->
+			</div>
 			<div class="col-twelve">
 				<div class="timeline-wrap">
 					<div class="timeline-block">
@@ -312,7 +314,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 
 		<div class="row resume-timeline">
 			<div class="col-twelve resume-header">
@@ -320,45 +322,8 @@
 			</div> <!-- /resume-header -->
 			<div class="col-twelve">
 				<div class="timeline-wrap">
-					<div class="timeline-block">
-						<div class="timeline-ico">
-							<i class="fa fa-briefcase"></i>
-						</div>
-						<div class="timeline-header">
-							<h3>国家级科创项目</h3>
-							<p>2013.12 - 2015.06</p>
-						</div>
-						<div class="timeline-content">
-							<h4>《黄土坡耕地微地形数值模拟及机理研究》 | 负责人</h4>
-							<span>
-								<h5 style="display: inline;">项目描述：</h5>采用人工模拟降雨试验和微地形扫描测量等方法，动态监测坡面水蚀过程中侵蚀形态发生与演变过程，结合
-								GIS 技术建立相应的微地形 DEM，通过理论分析和数学模拟，建立坡面不同侵蚀形态发生演变过程动态数值模拟模型；
-							</span></br>
-							<span>
-								<h5 style="display: inline;">工作描述：</h5>
-								作为项目总负责人，统筹规划，确定实验方案，带领组员开展黄土坡耕地坡面侵蚀形态演变的试验研究，并进行数据模拟及检验。
-							</span>
-						</div>
-					</div> <!-- /timeline-block -->
-					<div class="timeline-block">
-						<div class="timeline-ico">
-							<i class="fa fa-briefcase"></i>
-						</div>
-						<div class="timeline-header">
-							<h3>邳州市水利局项目</h3>
-							<p>2017.04 - 2018.05</p>
-						</div>
-						<div class="timeline-content">
-							<h4>邳州市地下水脆弱性评价 | 负责人</h4>
-							<span>
-								<h5 style="display: inline;">项目描述：</h5>基于 ArcGIS 软件、C#
-								开发，根据江苏省邳州市的地质数据、气象数据和自然地理数据等相关数据，通过理论分析与区域水文地质特征，并结合专家知识经验，确定地下水评价的指标体系及权重因子，完成对江苏省邳州市地下水脆弱性的评价工作；
-							</span></br>
-							<span>
-								<h5 style="display: inline;">工作描述：</h5>负责数据预处理，确定评价体系与权重因子，进行地下水脆弱性评价并出图。
-							</span>
-						</div>
-					</div> <!-- /timeline-block -->
+
+
 
 					<div class="timeline-block">
 						<div class="timeline-ico">
@@ -379,7 +344,46 @@
 								作为主要负责人，完成了蓝藻水华漂移机理与可视化研究，模拟了蓝藻水华空间分布特征及动态演化过程，并完成了滇池蓝藻水华漂移系统的研发。
 							</span>
 						</div>
-
+						<div class="timeline-block">
+							<div class="timeline-ico">
+								<i class="fa fa-briefcase"></i>
+							</div>
+							<div class="timeline-header">
+								<h3>邳州市水利局项目</h3>
+								<p>2017.04 - 2018.05</p>
+							</div>
+							<div class="timeline-content">
+								<h4>邳州市地下水脆弱性评价 | 负责人</h4>
+								<span>
+									<h5 style="display: inline;">项目描述：</h5>基于 ArcGIS 软件、C#
+									开发，根据江苏省邳州市的地质数据、气象数据和自然地理数据等相关数据，通过理论分析与区域水文地质特征，并结合专家知识经验，确定地下水评价的指标体系及权重因子，完成对江苏省邳州市地下水脆弱性的评价工作；
+								</span></br>
+								<span>
+									<h5 style="display: inline;">工作描述：</h5>负责数据预处理，确定评价体系与权重因子，进行地下水脆弱性评价并出图。
+								</span>
+							</div>
+						</div> <!-- /timeline-block -->
+						<div class="timeline-block">
+							<div class="timeline-ico">
+								<i class="fa fa-briefcase"></i>
+							</div>
+							<div class="timeline-header">
+								<h3>国家级科创项目</h3>
+								<p>2013.12 - 2015.06</p>
+							</div>
+							<div class="timeline-content">
+								<h4>《黄土坡耕地微地形数值模拟及机理研究》 | 负责人</h4>
+								<span>
+									<h5 style="display: inline;">项目描述：</h5>
+									采用人工模拟降雨试验和微地形扫描测量等方法，动态监测坡面水蚀过程中侵蚀形态发生与演变过程，结合
+									GIS 技术建立相应的微地形 DEM，通过理论分析和数学模拟，建立坡面不同侵蚀形态发生演变过程动态数值模拟模型；
+								</span></br>
+								<span>
+									<h5 style="display: inline;">工作描述：</h5>
+									作为项目总负责人，统筹规划，确定实验方案，带领组员开展黄土坡耕地坡面侵蚀形态演变的试验研究，并进行数据模拟及检验。
+								</span>
+							</div>
+						</div> <!-- /timeline-block -->
 					</div> <!-- /timeline-block -->
 
 					<!-- <div class="timeline-block">
